<resources>
    <string name="app_name">嗨聊</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_input_username">输入用户名</string>
    <string name="string_input_password">输入密码</string>
    <string name="string_login">登录</string>
    <string name="string_register">注册</string>
    <string name="string_cancel">取消</string>
    <string name="string_username">用户名</string>
    <string name="string_password">密码</string>
    <string name="string_repeat_password">重复密码</string>
    <string name="string_nickname">用户昵称</string>
    <string name="string_signature">个性签名</string>
    <string name="string_new_user_register">新用户注册</string>
    <string name="string_send">发送</string>
    <string name="string_input_message_content">输入聊天内容</string>
    <string name="string_exit_login">退出登录</string>
    <string name="string_exit_login_detail_message">确定退出登录？退出后，将会清空聊天记录！！</string>
    <string name="string_delete">删除</string>
    <string name="string_head_image">头像</string>
    <string name="string_user_id">用户id</string>
    <string name="string_update">更新</string>
    <string name="string_signature2">个性签名:</string>
    <string name="string_recent_msg">最近聊天</string>
    <string name="string_group_list">群列表</string>
    <string name="string_add_group">添加</string>
    <string name="string_search_group">搜索</string>
    <string name="string_operation">操作</string>
    <string name="string_create">创建</string>
    <string name="string_enter_group_detail_activity">进入GroupDetailActivity</string>
    <string name="string_submit">提交</string>
    <string name="string_group_name">群名称</string>
    <string name="string_set_manager">设为管理员</string>
    <string name="string_set_user">设为普通成员</string>
    <string name="string_remove_user">踢出该群</string>
    <string name="string_input_id_name_tag">输入id/群名/标签</string>
    <string name="string_enter_group">加入该群</string>
    <string name="string_hint_list">消息列表</string>
    <string name="string_agree">同意</string>
    <string name="string_refuse">拒绝</string>
    <string name="string_invite">邀请</string>
    <string name="string_exit">退出</string>
    <string name="string_more">更多</string>
    <string name="string_input_user_id">输入用户id值</string>
    <string name="string_ok">确定</string>
    <string name="string_input_group_id">输入群id</string>
    <string name="string_input_group_name">输入群名</string>
    <string name="string_shape_circle">圆形</string>
    <string name="string_shape_rect">方形</string>
    <string name="string_shape_null">无</string>
    <string name="string_not_none_username">用户名不能为空</string>
    <string name="string_not_length_less6_username">用户名不能低于6位</string>
    <string name="string_not_none_password">密码不能为空</string>
    <string name="string_not_length_less6_password">密码不能低于6位</string>
    <string name="string_not_equal_password">密码不匹配</string>
    <string name="string_not_only_digit_username">用户名不能为纯数字</string>
    <string name="string_not_groupname_null">群名称不能为空</string>
    <string name="string_chatting">聊天</string>
    <string name="string_address_list">通讯录</string>
    <string name="string_me">我</string>
    <string name="string_not_send_empty_message">不能发送空内容</string>
    <string name="string_searching">正在搜索中...</string>
    <string name="string_not_have_more_data">没有更多数据</string>
    <string name="string_exit_group">退出聊天群</string>
    <string name="string_exit_by_owner">是否退出该群？如果你是群主，将会解散该群！</string>
    <string name="string_save_image_success">图片保存成功</string>
    <string name="string_save_image_fail">图片保存失败</string>
    <string name="string_fail">失败</string>
    <string name="string_complete">完成</string>
    <string name="string_announcement">公告</string>
    <string name="string_file">文件</string>
    <string name="string_group_operation">群操作</string>
    <string name="string_publish_new_annouoncement">发布新公告</string>
    <string name="string_publish_announcement_content">正文（必填），15~500字</string>
    <string name="string_publish_announcement_title">标题（必填），4~40字</string>
    <string name="string_publish">发布</string>
    <string name="string_publish_announcement_error_title">标题字数不能低于4字</string>
    <string name="string_publish_announcement_error_content">正文字数不能低于15字</string>
    <string name="string_group_announcement">群公告</string>
    <string name="string_i_know">我知道了</string>
    <string name="string_upload_file">上传文件</string>
    <string name="string_remove">删除</string>
    <string name="string_download">下载</string>
    <string name="string_change_password">修改密码</string>
    <string name="string_input_old_password">输入旧密码</string>
    <string name="string_input_new_password">输入新密码</string>
    <string name="string_input_new_password_repeat">重复新密码</string>
    <string name="string_sync_group_message">同步聊天消息</string>

    <string-array name="group_tags">
        <item>同学</item>
        <item>同事</item>
        <item>亲友</item>
        <item>家校</item>
        <item>行业交流</item>
        <item>生活休闲</item>
        <item>兴趣爱好</item>
        <item>置业安家</item>
        <item>学习考试</item>
        <item>品牌产品</item>
        <item>游戏</item>
        <item>粉丝</item>
    </string-array>
    <string-array name="group_tag_search_group">
        <item>群id</item>
        <item>群名</item>
        <item>群标签</item>
    </string-array>

</resources>
