<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.csuft.chentao.activity.RegisterActivity">

    <data>

        <variable
            name="presenter"
            type="edu.csuft.chentao.controller.presenter.ActivityRegisterPresenter" />
    </data>

    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_register_head"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_add_head"
            android:onClick="@{()->presenter.onClickForSelectPicture()}" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_username"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_register_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_repeat_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_register_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_nickname"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_register_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_signature"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->presenter.onClickForRegister()}"
            android:text="@string/string_register" />

        <Button
            android:id="@+id/btn_register_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->presenter.onClickForCancel()}"
            android:text="@string/string_cancel" />

    </LinearLayout>
</layout>