<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.csuft.chentao.ui.activity.GroupSettingActivity">

    <data>

        <variable
            name="presenter"
            type="edu.csuft.chentao.controller.presenter.ActivityGroupSettingPresenter" />

        <variable
            name="title"
            type="String" />
    </data>

    <LinearLayout
        android:id="@+id/activity_group_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/layout_toolbar"
            bind:title="@{title}" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/group_setting_textview"
            android:drawableLeft="@drawable/ic_announcement2"
            android:drawableStart="@drawable/ic_announcement2"
            android:onClick="@{()->presenter.doClickToAnnouncement()}"
            android:text="@string/string_announcement" />

        <View style="@style/view_line_bottom" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/group_setting_textview"
            android:drawableLeft="@drawable/ic_attach_file"
            android:drawableStart="@drawable/ic_attach_file"
            android:onClick="@{()->presenter.doClickToFile()}"
            android:text="@string/string_file" />

        <View style="@style/view_line_bottom" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/group_setting_textview"
            android:drawableLeft="@drawable/ic_invite_group"
            android:drawableStart="@drawable/ic_invite_group"
            android:onClick="@{()->presenter.doClickToInvite()}"
            android:text="@string/string_invite" />

        <View style="@style/view_line_bottom" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/group_setting_textview"
            android:drawableLeft="@drawable/ic_sync"
            android:drawableStart="@drawable/ic_sync"
            android:onClick="@{()->presenter.doClickToSyncGroupMessage()}"
            android:text="@string/string_sync_group_message" />

        <View style="@style/view_line_bottom" />

        <android.support.v7.widget.AppCompatTextView
            style="@style/group_setting_textview"
            android:drawableLeft="@drawable/ic_exit_group"
            android:drawableStart="@drawable/ic_exit_group"
            android:onClick="@{()->presenter.doClickToExitGroup()}"
            android:text="@string/string_exit_group" />

        <View style="@style/view_line_bottom" />

    </LinearLayout>
</layout>