<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.EditorInfoActivity">

    <data>

        <import type="edu.csuft.chentao.utils.SharedPrefUserInfoUtil" />

        <variable
            name="userInfo"
            type="edu.csuft.chentao.pojo.bean.UserInfo" />

        <variable
            name="userHead"
            type="edu.csuft.chentao.pojo.bean.UserHead" />

        <variable
            name="presenter"
            type="edu.csuft.chentao.controller.presenter.ActivityEditorInfoPresenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/layout_editor_update_head"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="@{()->presenter.onClickToUpdateHeadImage()}">

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_beizhu"
                android:text="@string/string_head_image" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_editor_head"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_add_head"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->presenter.onClickToBigImage()}"
                app:imageBytes="@{userHead.image}" />
        </RelativeLayout>

        <View style="@style/view_line_bottom" />

        <RelativeLayout
            android:id="@+id/layout_editor_update_nickname"
            style="@style/layout_editor_hw"
            android:onClick="@{()->presenter.onClickToUpdateNickname()}">

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_beizhu"
                android:text="@string/string_nickname" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_editor_nickname"
                style="@style/view_editor_tv_neirong"
                android:text="@{userInfo.nickname}" />
        </RelativeLayout>

        <View style="@style/view_line_bottom" />

        <RelativeLayout style="@style/layout_editor_hw">

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_beizhu"
                android:text="@string/string_username" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_neirong"
                android:text="@{SharedPrefUserInfoUtil.getUsername()}" />
        </RelativeLayout>

        <View style="@style/view_line_bottom" />

        <RelativeLayout style="@style/layout_editor_hw">

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_beizhu"
                android:text="@string/string_user_id" />

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_neirong"
                android:text="@{String.valueOf(SharedPrefUserInfoUtil.getUserId())}" />
        </RelativeLayout>

        <View style="@style/view_line_bottom" />

        <RelativeLayout
            style="@style/layout_editor_hw"
            android:onClick="@{()->presenter.onClickToUpdateSignature()}">

            <android.support.v7.widget.AppCompatTextView
                style="@style/view_editor_tv_beizhu"
                android:text="@string/string_signature" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_editor_signature"
                style="@style/view_editor_tv_neirong"
                android:text="@{userInfo.signature}" />
        </RelativeLayout>

        <View style="@style/view_line_bottom" />

    </LinearLayout>
</layout>