<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="itemPresenter"
            type="edu.csuft.chentao.controller.presenter.ItemGroupOperationPresenter" />
    </data>

    <LinearLayout
        android:id="@+id/item_group_operation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="end|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_operation_add"
            style="@style/item_group_operation_text"
            android:drawableLeft="@drawable/ic_group_add"
            android:drawableStart="@drawable/ic_group_add"
            android:onClick="@{()->itemPresenter.onClickToAddGroup()}"
            android:text="@string/string_add_group" />

        <View
            style="@style/view_line_bottom"
            android:layout_width="150dp" />

        <TextView
            android:id="@+id/tv_item_operation_search"
            style="@style/item_group_operation_text"
            android:drawableLeft="@drawable/ic_group_search"
            android:drawableStart="@drawable/ic_group_search"
            android:onClick="@{()->itemPresenter.onClickToSearchGroup()}"
            android:text="@string/string_search_group" />

        <View
            style="@style/view_line_bottom"
            android:layout_width="150dp" />

        <TextView
            android:id="@+id/tv_item_operation_create"
            style="@style/item_group_operation_text"
            android:drawableLeft="@drawable/ic_group_create"
            android:drawableStart="@drawable/ic_group_create"
            android:onClick="@{()->itemPresenter.onClickToCreateGroup()}"
            android:text="@string/string_create" />
    </LinearLayout>
</layout>