<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.csuft.chentao.activity.CreateGroupActivity">

    <data>

        <variable
            name="presenter"
            type="edu.csuft.chentao.controller.presenter.ActivityCreateGroupPresenter" />

        <variable
            name="detail"
            type="edu.csuft.chentao.pojo.bean.ImageDetail" />
    </data>

    <RelativeLayout
        android:id="@+id/activity_create_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/iv_create_group_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_add_img_circle"
            android:contentDescription="@string/app_name"
            android:onClick="@{()->presenter.onClickToSelectImage()}"
            app:imageBytes="@{detail.image}" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_create_group_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_create_group_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/et_create_group_groupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/string_group_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/acs_create_group_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_create_group_input"
            android:layout_centerHorizontal="true" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acbtn_create_group_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/acs_create_group_tag"
            android:layout_marginTop="10dp"
            android:onClick="@{()->presenter.onClickToSubmit()}"
            android:text="@string/string_submit" />
    </RelativeLayout>
</layout>