<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="itemPresenter"
            type="edu.csuft.chentao.ui.view.ChangePasswordDialog.ItemChangePasswordPresenter" />
    </data>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_change_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:counterMaxLength="18"
            app:layout_widthPercent="90%">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_input_old_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:onTextChanged="@{itemPresenter.onTextChangedForOldPassword}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_change_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_change_password_old"
            android:layout_centerHorizontal="true"
            app:counterMaxLength="18"
            app:layout_widthPercent="90%">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_input_new_password"
                android:inputType="textPassword"
                android:maxLength="18"
                android:onTextChanged="@{itemPresenter.onTextChangedForNewPassword}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_change_password_new2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_change_password_new"
            android:layout_centerHorizontal="true"
            app:counterMaxLength="18"
            app:layout_widthPercent="90%">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_input_new_password_repeat"
                android:inputType="textPassword"
                android:maxLength="18"
                android:onTextChanged="@{itemPresenter.onTextChangedForNewPassword2}" />
        </android.support.design.widget.TextInputLayout>

    </android.support.percent.PercentRelativeLayout>
</layout>